# cpp-task-manager

./: .gitignore  CMakeLists.txt
frontend/include/: task.h  task_controller.h  task_view.h
frontend/src/: main.cpp  task_controller.cpp  task_manager_gui.cpp  task_model.cpp  task_view.cpp
include/: task_manager.h  task_manager_gui.h  task_model.h
src/: main.cpp  task.cpp  task_manager.cpp  task_manager_gui.cpp
